--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -1,9 +1,12 @@
+# This file defines the automated build process on GitHub.
+# It has been updated to use the latest version of the upload-artifact action.
+
 name: Build Windows Executable
 
 on:
   push:
-    branches: [ "main" ]
-  workflow_dispatch:
+    branches: [ "main", "master" ] # Triggers the build on a push to main or master branch
+  workflow_dispatch: # Allows you to manually trigger the build
 
 jobs:
   build:
@@ -11,10 +14,10 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4  # Updated to v4
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5  # Updated to v5
       with:
         python-version: '3.9'
 
@@ -28,7 +31,8 @@ jobs:
         pyinstaller --onefile --noconsole --name "API_Connection_Monitor" main.py
 
     - name: Upload artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4 # <<< THIS IS THE FIX (Updated from v3 to v4)
       with:
         name: Windows-Executable
         path: dist/API_Connection_Monitor.exe
+
